# icub-models-generator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  clean_env.sh  environment.yml  generateCoDyCoSuperbuild.sh  pixi.toml
dh/: CMakeLists.txt  README.md  generate.sh
dh/data/legacy_models/headV1-armsV1-legsV1-feetV1/: model.urdf
dh/data/legacy_models/headV1-armsV1-legsV2-feetV1/: model.urdf
dh/data/legacy_models/headV1-armsV2-legsV1-feetV1/: model.urdf
dh/data/legacy_models/headV1-armsV2-legsV1-feetV2/: model.urdf
dh/data/legacy_models/headV1-armsV2-legsV2-feetV2/: model.urdf
dh/data/legacy_models/headV2-armsV2-legsV2-feetV1/: model.urdf
dh/data/urdf_paris/: README
dh/data/urdf_paris/icub/: icub.xml
dh/data/urdf_paris/icub_simple/: icub_simple.xml
dh/data/urdf_paris/icub_simple/meshes/collision/: icub_simple_collision_chest.dae  icub_simple_collision_head.dae  icub_simple_collision_l_ankle_1.dae  icub_simple_collision_l_arm.dae  icub_simple_collision_l_foot.dae  icub_simple_collision_l_forearm.dae  icub_simple_collision_l_hand.dae  icub_simple_collision_l_hip_1.dae  icub_simple_collision_l_hip_2.dae  icub_simple_collision_l_shank.dae  icub_simple_collision_l_shoulder_1.dae  icub_simple_collision_l_shoulder_2.dae  icub_simple_collision_l_thigh.dae  icub_simple_collision_lap_belt_1.dae  icub_simple_collision_neck_1.dae  icub_simple_collision_neck_2.dae  icub_simple_collision_r_ankle_1.dae  icub_simple_collision_r_arm.dae  icub_simple_collision_r_foot.dae  icub_simple_collision_r_forearm.dae  icub_simple_collision_r_hand.dae  icub_simple_collision_r_hip_1.dae  icub_simple_collision_r_hip_2.dae  icub_simple_collision_r_shank.dae  icub_simple_collision_r_shoulder_1.dae  icub_simple_collision_r_shoulder_2.dae  icub_simple_collision_r_thigh.dae  icub_simple_collision_root_link.dae
dh/generator/: CMakeLists.txt  README  deprecated_icub_urdf_sdf_generator.cpp  icub_urdf_from_iDyn.cpp  icub_urdf_sdf_from_dh_generator.cpp  urdf_get_limits.cpp  urdf_get_meshes.cpp  urdf_sdf_from_dh_utils.cpp  urdf_sdf_from_dh_utils.h  urdf_utils.cpp  urdf_utils.h
dh/src/: CMakeLists.txt  urdf_utils.h
dh/toBeIntegrated/icub2gazeboPIDconverters/: CMakeLists.txt
dh/toBeIntegrated/icub2gazeboPIDconverters/include/: Constants.h
dh/toBeIntegrated/icub2gazeboPIDconverters/src/: ICUBConfigParser.cpp  main.cpp
simmechanics/: CMakeLists.txt  README.md
simmechanics/data/components/left_hand_mk3/: SIM_LEFT_HAND.xml  model.config  simmechanics2urdf_configfile.yaml  simmechanics2urdf_joints_configfile.csv
simmechanics/data/components/left_hand_mk3/conf/: left_hand_phys.ini
simmechanics/data/components/left_wrist_mk2/: SIM_L_WRIST.xml  model.config  simmechanics2urdf_configfile.yaml  simmechanics2urdf_joints_configfile.csv
simmechanics/data/components/left_wrist_mk2/conf/: left_wrist.ini  yarpmotorgui.ini
simmechanics/data/hand_mk3/: convertModel.sh  model.config  simmechanics2urdf_configfile.yaml  simmechanics2urdf_joints_configfile.csv
simmechanics/data/iCubHeidelberg01_model/: iCubHeidelberg01.sdf  iCubHeidelberg01.urdf  iCubHeidelberg01_SIM_MODEL.gv  iCubHeidelberg01_simmechanics_options.yaml  model.config
simmechanics/data/iCubHeidelberg01_model/conf/: gazebo_iCubHeidelberg01_left_leg.ini  gazebo_iCubHeidelberg01_right_leg.ini  yarpmotorgui.ini
simmechanics/data/iCubHeidelberg01_model/dae_meshes/: weight-1kg_prt.dae
simmechanics/data/icub2_5/: ICUB_2-5_BB_SIM_MODEL.xml  ICUB_2-5_BB_joint_parameters.csv  ICUB_2-5_BB_joint_parameters.csv.in  ICUB_2-5_BB_no_battery_simmechanics_options.yaml  ICUB_2-5_BB_simmechanics_options.yaml  ICUB_2-5_BB_simmechanics_options.yaml.in  ICUB_2-5_BB_simmechanics_options_NO_BACKPACK.yaml  ICUB_2-5_plus_BB_SIM_MODEL.xml  ICUB_2-5_plus_BB_simmechanics_options.yaml  ICUB_2-5_plus_BB_simmechanics_options.yaml.in  README.md  adjust_com_for_model_without_backpack.py  iCubGenova02_simmechanics_options.yaml
simmechanics/data/icub2_5/conf/: gazebo_icub_ft_imu_3B11.ini  gazebo_icub_ft_imu_3B12.ini  gazebo_icub_ft_imu_3B13.ini  gazebo_icub_ft_imu_3B14.ini  gazebo_icub_xsens_inertial.ini
simmechanics/data/icub2_5/conf/MTB/: gazebo_icub_left_arm_mtb.ini  gazebo_icub_right_arm_mtb.ini  gazebo_icub_torso_mtb.ini
simmechanics/data/icub3/: ICUB3_ALL_SIM_MODEL.xml  ICUB3_L_LEG_SIM_MODEL.xml  ICUB3_R_LEG_SIM_MODEL.xml  ICUB3_UPPERBODY_SIM_MODEL.xml  ICUB_3_all_options.yaml  ICUB_3_all_options_gazebo.yaml  ICUB_3_all_options_gazebo.yaml.in  ICUB_3_head_options.yaml  ICUB_3_joint_all_parameters.csv  ICUB_3_joint_head_parameters.csv  ICUB_3_joint_leftleg_parameters.csv  ICUB_3_joint_rightleg_parameters.csv  ICUB_3_joint_upperbody_parameters.csv  ICUB_3_leftleg_options.yaml  ICUB_3_rightleg_options.yaml  ICUB_3_upperbody_options.yaml  README.md  convertModel.sh  icub3-upperbody-options.yaml  model.config
simmechanics/data/icub3/conf/: gazebo_icub_head_without_eyes.ini  gazebo_icub_torso.ini  icub_ROS2.xml
simmechanics/data/icub3/meshes/simmechanics/: sim_icub3_chest_prt.stl  sim_icub3_l_ankle_2_prt.stl  sim_icub3_l_shoulder_1_prt.stl  sim_icub3_l_shoulder_3_prt.stl  sim_icub3_l_upperarm_prt.stl  sim_icub3_r_ankle_2_prt.stl  sim_icub3_r_foot_front_prt.stl  sim_icub3_r_lower_leg_prt.stl  sim_icub3_r_shoulder_1_prt.stl  sim_icub3_r_shoulder_2_prt.stl  sim_icub3_r_shoulder_3_prt.stl  sim_icub3_r_upperarm_prt.stl  sim_icub3_torso_2_prt.stl
simmechanics/data/left_hand_mk3/: model.config  simmechanics2urdf_configfile.yaml
simmechanics/data/wrist_mk2/: convertModel.sh  model.config  simmechanics2urdf_configfile.yaml
simmechanics/scripts/: README.md  convertSTL.rb  generate_positions_file.sh  generate_positions_file.sh~  generate_taxels_3d_positions.py
src/: CMakeLists.txt  CMakeLists2.txt  icub_urdf_from_iDyn.cpp  icub_urdf_sdf_generator.cpp  urdf_gazebo_cleanup.cpp  urdf_get_limits.cpp  urdf_get_meshes.cpp  urdf_get_total_mass.cpp  urdf_print_homogeneous_transformations.cpp  urdf_utils.cpp  urdf_utils.h
tests/: CMakeLists.txt  (+1 more)
urdf_utils/: CMakeLists.txt  urdf_gazebo_cleanup.cpp  urdf_get_limits.cpp  urdf_get_meshes.cpp  urdf_get_total_mass.cpp
(+95 files in other folders)
